--- a/website/static/stylesheet/sass/layout/_header.scss
+++ b/website/static/stylesheet/sass/layout/_header.scss
@@ -5,167 +5,169 @@
   overflow: hidden;
   width: 53%;
   line-height: 2rem;
-  
-    @include res(phone) {
-      font-size: 1rem;
-      
-    }
 
-    &__line{
-animation: fade-in 3s ease-in-out;
- background: white;
-      @include res(phone){
-        display: none;
-      }
-    }
-  
-  
-    &__blob-blue{
-      width: 70%;
-      height: 70%;
-      background-image: url(../static/blob-blue.png);
-  
-      position: absolute;
-      background-repeat: no-repeat;
-      top: 0rem;
-      right: -30rem;
-      overflow-x: hidden;
-      overflow: hidden;
-      background-size: 40%;
-    }
-  
-    &__name {
-      font-family: 'Dancing Script', cursive;
-      margin: 3rem 0;
-      margin-bottom: 1rem;
-      color: $text-color;
-      font-size: 3.5rem;
-      animation: appear 1s ease-in-out;
-      // animation-delay: 1s;
+  @include res(phone) {
+    font-size: 1rem;
+    width: 100%;
 
-      &-colored{
-        color: $secondary-color;
-      }
-    }
-  
-    &__greet {
-      margin-bottom: 1.3rem;
-      color: $text-color;
-      font-size: 1.4rem;
-      
-      animation: appear2 2s ease-in-out;
-      // animation-delay: 2s;
-      // animation-direction: initial;
-    }
-  
-    &__description {
-      margin: 1rem 0;
-      margin-top: 2rem;
-      margin-bottom: 3rem;
-      font-size: 1rem;
-      color: $text-color;
-      animation: fade-in 3s ease-in-out;
-
-      @include res(phone) {
-        margin-top: 0rem;
-      }
-
-    }
-  
-    &__blog-btn--1 {
-      text-decoration: underline;
-      display: inline-block;
-      padding: .7rem .9rem;
-      border-radius: .4rem;
-      font-size: 1.3rem;
-      text-align: center;
-      background-color: $secondary-color;
-      font-weight: 300;
-      color: $text-color;
-      margin-left: .3rem;
-      margin-right: 1rem;
-      margin-bottom: 1rem;
-      animation: bounce-in 4s ease-out;
-
-      
-  
-  
-      &:hover {
-        background-color: $tertiary-color;
-        transform: translateY(-.07rem) scale(1.05);
-        border-radius: .4rem;
-        transition: all .2s;
-        color: $text-color;
-        padding: .7rem .9rem;
-      }
-  
-      &:link {
-        text-decoration: none;
-      }
-  
-  
-    }
-
-      
-    &__blog-btn--2 {
-      text-decoration: underline;
-      display: inline-block;
-      padding: .7rem .9rem;
-      border-radius: .4rem;
-      font-size: 1.3rem;
-      text-align: center;
-      background-color: $tertiary-color;
-      font-weight: 300;
-      color: $text-color;
-      margin-left: .3rem;
-      
-      animation: bounce-in 4s ease-out;
-  
-  
-      &:hover {
-        background-color: $secondary-color;
-        transform: translateY(-.07rem) scale(1.05);
-        border-radius: .4rem;
-        transition: all .2s;
-        color: $text-color;
-        padding: .7rem .9rem;
-      }
-  
-      &:link {
-        text-decoration: none;
-      }
-  
-  
-    }
-  
-  
-  
-  
   }
+
+  &__line {
+    animation: fade-in 3s ease-in-out;
+    background: white;
+
+    @include res(phone) {
+      display: none;
+    }
+  }
+
+  &__blob-blue {
+    width: 70%;
+    height: 70%;
+    background-image: url(../static/blob-blue.png);
+
+    position: absolute;
+    background-repeat: no-repeat;
+    top: 0rem;
+    right: -30rem;
+    overflow-x: hidden;
+    overflow: hidden;
+    background-size: 40%;
+  }
+
+  &__name {
   
-  
-  .main {
-    margin: auto 9rem;
+    font-family: 'Dancing Script', cursive;
+    margin: 3rem 0;
+    margin-bottom: 1rem;
+    color: $text-color;
+    font-size: 3.5rem;
+    animation: appear 1s ease-in-out;
+    // animation-delay: 1s;
+
+    &-colored {
+      color: $secondary-color;
+    }
+  }
+
+  &__greet {
+    margin-bottom: 1.3rem;
+    color: $text-color;
+    font-size: 1.4rem;
+
+    animation: appear2 2s ease-in-out;
+    // animation-delay: 2s;
+    // animation-direction: initial;
+  }
+
+  &__description {
+    margin: 1rem 0;
+    margin-top: 2rem;
+    margin-bottom: 3rem;
+    font-size: 1rem;
+    color: $text-color;
+    animation: fade-in 3s ease-in-out;
+
+    @include res(phone) {
+      margin-top: 0rem;
+    }
+
+  }
+
+  &__blog-btn--1 {
+    text-decoration: underline;
+    display: inline-block;
+    padding: .7rem .9rem;
+    border-radius: .4rem;
+    font-size: 1.3rem;
+    text-align: center;
+    background-color: $secondary-color;
+    font-weight: 300;
+    color: $text-color;
+    margin-left: .3rem;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    animation: bounce-in 4s ease-out;
+
+
+
+
+    &:hover {
+      background-color: $tertiary-color;
+      transform: translateY(-.07rem) scale(1.05);
+      border-radius: .4rem;
+      transition: all .2s;
+      color: $text-color;
+      padding: .7rem .9rem;
+    }
+
+    &:link {
+      text-decoration: none;
+    }
+
+
+  }
+
+
+  &__blog-btn--2 {
+    text-decoration: underline;
+    display: inline-block;
+    padding: .7rem .9rem;
+    border-radius: .4rem;
+    font-size: 1.3rem;
+    text-align: center;
+    background-color: $tertiary-color;
+    font-weight: 300;
+    color: $text-color;
+    margin-left: .3rem;
+
+    animation: bounce-in 4s ease-out;
+
+
+    &:hover {
+      background-color: $secondary-color;
+      transform: translateY(-.07rem) scale(1.05);
+      border-radius: .4rem;
+      transition: all .2s;
+      color: $text-color;
+      padding: .7rem .9rem;
+    }
+
+    &:link {
+      text-decoration: none;
+    }
+
+
+  }
+
+
+
+
+}
+
+
+.main {
+  margin: auto 9rem;
+  position: relative;
+  width: 80%;
+  display: inline-block;
+  max-width: 100%;
+
+  @include res(tab-port) {
+    margin-left: 0;
+    display: inline-block;
+    width: 100%;
+  }
+
+  @include res(phone) {
+    margin-left: .3rem;
     position: relative;
-    width: 80%;
+    width: 100%;
     display: inline-block;
     max-width: 100%;
-  
-    @include res(tab-port) {
-      margin-left: 0;
-      display: inline-block;
-      width: 100%;
-    }
-  
-    @include res(phone) {
-      margin-left: .3rem;
-      position: relative;
-      width: 100%;
-      display: inline-block;
-      max-width: 100%;
-      margin-right: 0;
-      overflow-x: hidden;
-  
-    }
-  
+    margin-right: 0;
+    overflow-x: hidden;
+
   }
+
+}
